--- a/marvel/main.scss
+++ b/marvel/main.scss
@@ -198,7 +198,7 @@ h2 span {
   bottom: -14px;
   left: 50%;
   transform: translate(-50%);
-  color: #f0f0f0;
+  color: rgba(68, 68, 68, 0.12);
 }
 h2.middle {
   font-size: 30px;
