--- a/marvel/main.css
+++ b/marvel/main.css
@@ -154,8 +154,6 @@ h1 {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
-  background-color: #fcfcfc;
 }
 
 .banner1_image {
@@ -232,6 +230,7 @@ h2 span {
   left: 50%;
   transform: translate(-50%);
   color: #f0f0f0;
+  z-index: -1;
 }
 
 h2.middle {
@@ -249,6 +248,7 @@ h2.small span {
   bottom: -12px;
   left: -2px;
   transform: none;
+  z-index: -1;
 }
 
 h2.banner4-section {
@@ -326,10 +326,9 @@ h4 {
   z-index: -1;
 }
 
-.banner_decoration .img2 {
-  position: absolute;
-  bottom: -260px;
-  right: -450px;
+.img2 {
+  padding-top: 63.2%;
+  margin-left: 78.2%;
 }
 
 .banner2_brief {
@@ -530,7 +529,6 @@ ul {
   bottom: 0;
   left: 0;
   z-index: -1;
-  z-index: -1;
 }
 
 .banner4_are {
@@ -577,6 +575,7 @@ ul {
 
 .banner5_full {
   padding-top: 170px;
+  z-index: 1;
 }
 
 .banner5_content {
@@ -649,6 +648,7 @@ ul {
 
 .banner6_full {
   padding-top: 150px;
+  z-index: 1;
 }
 
 .work {
@@ -796,8 +796,6 @@ ul {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
-  z-index: 1;
 }
 
 .banner7 .container {
@@ -869,6 +867,7 @@ ul {
 
 .banner8_full {
   padding-top: 140px;
+  z-index: 1;
 }
 
 .price_list {
@@ -978,6 +977,10 @@ ul {
 
 .banner9 {
   background-color: #fff;
+}
+
+.banner9_full {
+  z-index: 1;
 }
 
 .crew {
@@ -1120,6 +1123,7 @@ ul {
   background-size: cover;
   position: relative;
   padding-bottom: 105px;
+  z-index: 1;
 }
 
 .banner10:before {
@@ -1141,6 +1145,7 @@ ul {
   text-align: center;
   color: #fff;
   margin: 100px 0 10px;
+  z-index: 1;
 }
 
 .point {
@@ -1169,6 +1174,7 @@ ul {
 
 .famous {
   width: 20%;
+  z-index: 1;
 }
 
 .great_poster {
@@ -1210,6 +1216,7 @@ ul {
   font-weight: 700;
   font-size: 18px;
   color: #444;
+  z-index: 1;
 }
 
 .great_note {
@@ -1262,6 +1269,7 @@ ul {
 
 .contact__title {
   padding-top: 160px;
+  z-index: 1;
 }
 
 .contact__form {
@@ -1285,7 +1293,7 @@ ul {
   font-size: 18px;
   color: #808080;
   border: 1px solid #dedede;
-  outline-color: #ffe400;
+  outline-color: #fff;
 }
 
 .contact-form__item input::-webkit-input-placeholder {
@@ -1301,7 +1309,7 @@ ul {
 }
 
 .contact-form__item input:focus::-webkit-input-placeholder {
-  color: #ffe400;
+  color: #fff;
 }
 
 .contact-form__item textarea {
@@ -1312,7 +1320,7 @@ ul {
   font-size: 18px;
   color: #808080;
   border: 1px solid #dedede;
-  outline-color: #ffe400;
+  outline-color: #fff;
   resize: none;
   height: 505px;
 }
@@ -1330,7 +1338,7 @@ ul {
 }
 
 .contact-form__item textarea:focus::-webkit-input-placeholder {
-  color: #ffe400;
+  color: #fff;
 }
 
 .contact-form__item:nth-child(5) {
@@ -1338,12 +1346,13 @@ ul {
 }
 
 .banner13 {
-  background-image: url(image/map.png);
+  background-color: #ffe400;
   text-align: center;
   position: relative;
+  z-index: 1;
 }
 
-.banner13:before {
+.banner13 map_banner:before {
   content: "";
   position: absolute;
   top: 0;
@@ -1351,7 +1360,7 @@ ul {
   bottom: 0;
   left: 0;
   background-color: #ffe400;
-  opacity: .8;
+  opacity: .8s;
 }
 
 .map_banner {
@@ -1361,7 +1370,13 @@ ul {
   font-weight: 700;
   font-size: 30px;
   line-height: 165px;
-  z-index: 1;
+}
+
+.banner13:hover {
+  background-image: url(image/map.png);
+  width: 100%;
+  height: 100%;
+  transform: scale(1.1, 1);
 }
 
 .map_banner span {
@@ -1441,6 +1456,7 @@ ul {
   color: #fff;
   font-size: 12px;
   text-align: center;
+  margin: 0;
 }
 
 /*# sourceMappingURL=main.css.map */
