--- a/marvel/main.scss
+++ b/marvel/main.scss
@@ -133,8 +133,7 @@ h1 {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
-  background-color: #fcfcfc;
+//  z-index: -1;
 }
 .banner1_image {
   position: absolute;
@@ -198,7 +197,8 @@ h2 span {
   bottom: -14px;
   left: 50%;
   transform: translate(-50%);
-  color: rgba(68, 68, 68, 0.12);
+  color: #f0f0f0;
+	z-index: -1;
 }
 h2.middle {
   font-size: 30px;
@@ -213,6 +213,7 @@ h2.small span {
   bottom: -12px;
   left: -2px;
   transform: none;
+	z-index: -1;
 }
 h2.banner4-section {
   color: #fdfdfd;
@@ -278,10 +279,9 @@ h4 {
   left: 0;
   z-index: -1;
 }
-.banner_decoration .img2 {
-  position: absolute;
-  bottom: -260px;
-  right: -450px;
+ .img2 {
+	padding-top: 63.2%;
+	margin-left: 78.2%;
 }
 .banner2_brief {
   font-family: "Muli", sans-serif;
@@ -449,7 +449,7 @@ ul {
   bottom: 0;
   left: 0;
   z-index: -1;
-  z-index: -1;
+  
 }
 .banner4_are {
   display: flex;
@@ -488,6 +488,7 @@ ul {
 }
 .banner5_full {
   padding-top: 170px;
+	z-index: 1;
 }
 .banner5_content {
   margin-top: 130px;
@@ -544,6 +545,7 @@ ul {
 }
 .banner6_full {
   padding-top: 150px;
+	z-index: 1;
 }
 .work {
   margin-top: 65px;
@@ -671,8 +673,7 @@ ul {
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: -1;
-  z-index: 1;
+  
 }
 .banner7 .container {
   text-align: right;
@@ -732,6 +733,7 @@ ul {
 }
 .banner8_full {
   padding-top: 140px;
+	z-index: 1;
 }
 .price_list {
   margin-top: 140px;
@@ -824,7 +826,9 @@ ul {
 }
 .banner9 {
   background-color: #fff; 
+	
 }
+.banner9_full{z-index: 1;}
 .crew {
 	margin-top: 130px;
 	margin-bottom: 130px; 
@@ -947,6 +951,7 @@ ul {
   background-size: cover;
   position: relative;
   padding-bottom: 105px;
+	z-index: 1;
 }
 .banner10:before {
   content: "";
@@ -965,6 +970,7 @@ ul {
   text-align: center;
   color: #fff;
   margin: 100px 0 10px;
+	z-index: 1;
 }
 .point {
   text-align: center;
@@ -978,6 +984,7 @@ ul {
 }
 .banner11 {
   background-color: #fff;
+//	z-index: 1;
 }
 .banner11_new {
   margin-top: 115px;
@@ -987,6 +994,7 @@ ul {
 }
 .famous {
   width: 20%;
+	z-index: 1;
 }
 .great_poster {
   position: relative;
@@ -1024,6 +1032,7 @@ ul {
   font-weight: 700;
   font-size: 18px;
   color: #444;
+	z-index: 1;
 }
 .great_note {
   font-size: 10px;
@@ -1064,10 +1073,12 @@ ul {
 }
 .banner12 {
   background-image: url(image/base_banner_12.png);
-  background-size: cover;
+  background-size: cover;	
 }
+
 .contact__title {
   padding-top: 160px;
+	z-index: 1;
 }
 .contact__form {
   margin-top: 170px;
@@ -1087,7 +1098,7 @@ ul {
   font-size: 18px;
   color: #808080;
   border: 1px solid #dedede;
-  outline-color: #ffe400;
+  outline-color: #fff;
 }
 .contact-form__item input::-webkit-input-placeholder {
   font-size: 14px;
@@ -1099,7 +1110,7 @@ ul {
   color: #000;
 }
 .contact-form__item input:focus::-webkit-input-placeholder {
-  color: #ffe400;
+  color: #fff;
 }
 .contact-form__item textarea {
   width: 100%;
@@ -1109,7 +1120,7 @@ ul {
   font-size: 18px;
   color: #808080;
   border: 1px solid #dedede;
-  outline-color: #ffe400;
+  outline-color: #fff;
   resize: none;
   height: 505px;
 }
@@ -1123,25 +1134,27 @@ ul {
   color: #000;
 }
 .contact-form__item textarea:focus::-webkit-input-placeholder {
-  color: #ffe400;
+  color: #fff;
 }
 .contact-form__item:nth-child(5) {
   width: 100%;
 }
 .banner13 {
-  background-image: url(image/map.png);
+  background-color: #ffe400;
   text-align: center;
   position: relative;
+	z-index: 1;
 }
-.banner13:before {
+.banner13 map_banner:before {
   content: "";
-  position: absolute;
+	position: absolute;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
   background-color: #ffe400;
-  opacity: .8;
+  opacity: .8s;
+	
 }
 .map_banner {
   position: relative;
@@ -1150,7 +1163,14 @@ ul {
   font-weight: 700;
   font-size: 30px;
   line-height: 165px;
-  z-index: 1;
+  
+}
+.banner13:hover {
+	background-image: url(image/map.png);
+	width: 100%;
+	height: 100%;
+	transform: scale(1.1, 1);
+	
 }
 .map_banner span {
   margin-left: 30px;
@@ -1217,4 +1237,5 @@ ul {
   color: #fff;
   font-size: 12px;
   text-align: center;
+	margin: 0;
 }
